--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -28,3 +28,6 @@ target_link_libraries(ArtReaderTest Arcanum)
 
 add_executable(MemoryReaderTest "MemoryReaderTest.cpp")
 target_link_libraries(MemoryReaderTest Arcanum)
+
+add_executable(DirReaderTest "DirReaderTest.cpp")
+target_link_libraries(DirReaderTest Arcanum)
