--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_subdirectory("LiteCpp")
+add_subdirectory(litecpp)
 
 add_executable(DatReaderTest "DatReaderTest.cpp")
 target_link_libraries(DatReaderTest Arcanum)
@@ -36,6 +36,3 @@ target_link_libraries(DirReaderTest Arcanum)
 
 add_executable(HashMapTest "HashMapTest.cpp")
 target_link_libraries(HashMapTest Arcanum)
-
-add_executable(LiteCppTest "LiteCppTest.cpp")
-target_link_libraries(LiteCppTest Arcanum)
